added advisor to project team

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -66,7 +67,7 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Hestia Güvenlik Duvarı</h1>
-          <h2><i>Hestia</i> küçük ve ev ofis işletmeleri için geliştirilmiş Durum Denetlemeli Güvenlik Duvarıdır.</h2>
+          <h2><i>Hestia</i>, CEIT 435 ve 436 dersleri kapsamında geliştirilmiş küçük ve ev ofis işletmeleri için Durum Denetlemeli Güvenlik Duvarıdır.</h2>
         </div>
       </div>
 
@@ -344,6 +345,22 @@
         </div>
 
         <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/1529444540518.jfif" class="img-fluid" alt="">
+                <div class="social">                  
+                  <a href="https://www.linkedin.com/in/%C3%B6mer-delialio%C4%9Flu-92528822/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://scholar.google.com.tr/citations?user=qZD6soUAAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>                 
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Prof.Dr. Ömer Delialioğlu</h4>
+                <span>Danışman - omerd@metu.edu.tr</span>                
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
